Fix overflow for modal

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -25,3 +25,7 @@ a {
 .d-none {
   display: none !important;
 }
+
+.overflow-none {
+  overflow: hidden;
+}
