--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -4,22 +4,20 @@
   z-index: 11;
   position: fixed;
   top: 0;
-  left: 0;
-  min-height: 100vh;
   width: 100%;
+  max-height: 100%;
   background: rgba($color-dark, 0.5);
   visibility: hidden;
   opacity: 0;
-  overflow-y: scroll;
 
   &--active {
     visibility: visible;
     opacity: 1;
+    overflow-y: scroll;
   }
 
   &__card {
-    position: relative;
-    padding: 5rem 2rem;
+    padding: 5rem 1rem;
     background: $gradient-primary;
     color: $color-light;
 
@@ -50,13 +48,41 @@
   }
 
   & img {
-    min-width: 35rem;
-    max-width: 100vw;
+    min-width: 30rem;
+    max-width: 90vw;
+  }
+
+  .pokemon-shadow {
+    width: 20rem;
+  }
+
+  &__info {
+    padding: 2rem;
+    background: white;
+    border-radius: 2rem;
+    margin-bottom: 2rem;
+    color: $color-dark;
+    text-align: center;
+
+    & ul {
+      @include flexCenter();
+    }
+  }
+
+  &__pkm-desc-title {
+    font-size: 1.7rem;
+    font-weight: 700;
+    margin-bottom: 1rem;
+  }
+
+  &__pkm-desc {
+    font-size: 1.5rem;
+    font-weight: 300;
   }
 
   &__close {
     z-index: 11;
-    padding: 0 1rem;
+    padding: 0 0 0 1rem;
     position: absolute;
     right: 2rem;
     top: 3rem;
